@@ -1,5 +1,8 @@
 2006-12-13  Eric Hodel  <drbrain@segment7.net>
 
+	* lib/rubygems/installer.rb (Gem::Installer#build_extensions): Capture
+	stderr into results when building extensions.
+
 	* lib/rubygems/gem_commands.rb (Gem::ContentsCommand): Allow version
 	to be passed to gem contents.  Not backwards compatible, -v now -V and
 	vice versa.  Fixes bug 2723.
